fix: include steps from Background in Rules